--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <h2> Ejercicio Sushiito</h2>
 <ul>
+<li><a href="Ejercicio.Sesion2.html">Ejercicio sesión 2</a></li>
 <li><a href="Ejercicio.Sesion3.html">Ejercicio sesión 3</a></li>
 </ul>
 </html>
